# ds-text-generation-kata

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
TextGeneration/: generate.py  model.py  train.py
TextGeneration/example_jsons/: input.json  output.json  training.json
TextGeneration/utils/: files.py  preprocessor.py  schemas.py
